<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ListView
            android:id="@+id/lvSimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_weight="1"
                android:onClick="onAddClick"
                android:text="@string/add"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_weight="1"
                android:onClick="onCalcClick"
                android:text="@string/calc"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_weight="1"
                android:onClick="onCloseClick"
                android:text="@string/exit"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>